...
import VisionKit

class ScanViewController: UIViewController, Storyboarded {
    
    // MARK: - Outlets
    @IBOutlet weak var detailsViewBottomConstraint: NSLayoutConstraint!
    @IBOutlet weak var detailsView: DetailsView! {
        didSet {
            detailsView.delegate = self
        }
    }
    
    //MARK: Properties
...
        guard let title = detailsView.titleTextField.text, title != "",
              let description = detailsView.descriptionTextView.text,
              description != descriptionPlaceHolderText,
              description != "",
              let image = detailsView.imageView.image?.toData()
        else {
            AlertPresenter.shared.present(title: "Save entry", message: "Clould not save entry,please add content", on: self)
            return
        }
        let expense = ExpenseModel(id: UUID(), title: title, descriptionData: description, createdDate: Date(), image: image)
        viewModel?.saveData(expense: expense)
    }
    
...
